# Perekop

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt
.cache/clangd/index/: context.c.A2E8E0CECB7488B9.idx  egl_context.c.4ACB2AE65D72AA7B.idx  engine.hpp.29C27104AC8A9A95.idx  events.hpp.516B3DEF0C86D736.idx  game.cpp.B327B45544044CB3.idx  geometry.cpp.D6B1FE1CEAF714C4.idx  geometry.hpp.7F0508F57C69B523.idx  glad.c.2BE48D1BBCF11A5E.idx  glad.h.99F3401BDE4E4F35.idx  glfw3.h.29745A0ADE4AD796.idx  glfw3native.h.D0AC3F1E0078E67E.idx  init.c.6888C0FC7C7C1861.idx  input.c.F65F99EFBA5390D7.idx  internal.h.0813FD34C1E078C6.idx  khrplatform.h.CB162319C0268BE4.idx  main.cpp.DECBEBA0F1A545E3.idx  mappings.h.2C9A658F87C0F033.idx  monitor.c.A2DFC24E0438B643.idx  null_init.c.D9D691B4D867EF54.idx  null_joystick.c.1522620950E61F33.idx  null_joystick.h.E0ADF0F5A92BB474.idx  null_monitor.c.A7D35958FE567010.idx  null_platform.h.DD4474E3F7D02207.idx  null_window.c.0C9A6D1B079137BC.idx  osmesa_context.c.FC3621A73F30ECF5.idx  platform.c.24F67E06C1B4863C.idx  platform.h.ADA97E72A707B089.idx  util.hpp.A656C091068460BB.idx  vulkan.c.164F78847069FCF2.idx  wgl_context.c.7CCF6063CA3045AD.idx  win32_init.c.E3F2C1E72310382A.idx  win32_joystick.c.47D999CAC51FCD0F.idx  win32_joystick.h.943D9E3171EC4A7E.idx  win32_module.c.BB79A5396D342ED0.idx  win32_monitor.c.836E2CF5002AEFD2.idx  win32_platform.h.D0AEE0CF7199A0F1.idx  win32_thread.c.929661DD9C293822.idx  win32_thread.h.0FE7F2E87B1B1851.idx  win32_time.c.229D905885693420.idx  win32_time.h.09B45680FA8E7C0E.idx  (+2 more)
Engine/Interface/: engine.hpp  types.hpp
Engine/Source/: types.cpp
engine/assets/shaders/: gui_vert.glsl  pre_vsrc.glsl
engine/include/: Internal.hpp  Perekop.hpp
engine/include/PK/: Internal.hpp  pch.hpp
engine/include/PKCore/: Array.hpp  Debug.hpp  Memory.hpp  Set.hpp  String.hpp  Vector.hpp  algorithm.hpp  array.hpp  slot_map.hpp  stack.hpp
engine/include/PKLib/: Body.hpp  Event.hpp  File.hpp  Geometry.hpp  Graphics.hpp  Gui.hpp  Pose.hpp  Time.hpp  body.hpp  camera.hpp  json.hpp  math.hpp  mesh.hpp  model.hpp  physics.hpp  shader.hpp  texture.hpp
engine/include/PKMath/: constants.hpp  functional.hpp  mat.hpp  number.hpp  scalar.hpp  vec.hpp
engine/include/Perekop/: callbacks.hpp  gui.hpp  input.hpp  window.hpp  world.hpp
engine/lib/: stb_image.h
engine/src/: File.cpp  Gui.cpp  Physics.cpp  Render.cpp  Window.cpp  json.cpp  main.cpp  parser.cpp
game/assets/extra/: components.json
game/assets/shaders/: frag.glsl  (+1 more)
game/shaders/: vert.glsl
game/src/: cam.cpp  camera.cpp  freecam.cpp  game.cpp  gui.cpp  main.cpp
pkengine/: pkinterface.hpp
pkengine/cli/: main.cpp
pkengine/extra/: gui_vert.glsl  pre_vsrc.glsl
pkengine/include/: Internal.hpp  Perekop.hpp  camera.hpp  engine.hpp  events.hpp  geometry.hpp  mesh.hpp  util.hpp  window.hpp
pkengine/src/: File.cpp  GUI.cpp  Mesh.cpp  Model.cpp  Physics.cpp  Render.cpp  Window.cpp  Worker.cpp  events.cpp  geometry.cpp  glfw.cpp  init.cpp  main.cpp  mesh.cpp  pkinterface.cpp
(+86 files in other folders)
